# ecal-shm-layer

./: CMakeLists.txt  README.md
.github/workflows/: build-ubuntu-20.yml  build-ubuntu-22.yml  build-windows.yml
src/: ecal_global_accessors.cpp  ecal_global_accessors.h  ecal_globals.cpp  ecal_globals.h  ecal_memfile_db.cpp
